<resources>
    <string name="app_name">DebugKit</string>
    <string name="testing_section">Testing</string>
    <string name="option_annotation_POI">Annotations </string>
    <string name="option_map_view_settings">Map settings</string>
    <string name="option_map_cache">Map cache</string>
    <string name="option_last_rendered_frame">Last rendered frame</string>
    <string name="option_ccp_animation_custom_view"> CCP Animation &amp; custom view</string>
    <string name="option_bounding_box">Bounding box</string>
    <string name="option_internalization">Internalization</string>
    <string name="option_animate">Animate</string>
    <string name="option_map_style">Map style</string>
    <string name="option_scale_view">Scale view</string>
    <string name="option_callout_view">Callout view</string>
    <string name="option_routing">Routing</string>
    <string name="option_routing_with_points">Track with custom location</string>
    <string name="option_map_version_information">Version information</string>
    <string name="option_overlays">Overlays</string>
    <string name="option_poi_tracker">POI Tracker</string>
    <string name="option_position_logging">Position logging</string>
    <string name="routing_start_long">Start longitude</string>
    <string name="routing_start_lat">Start latitude</string>
    <string name="routing_dest_long">Destination longitude</string>
    <string name="routing_dest_lat">Destination latitude</string>
    <string name="routing_longtap_start">Long tap for start point</string>
    <string name="routing_longtap_dest">Long tap for destination point</string>
    <string name="routing_routesnr">Number of routes</string>
    <string name="routing_routemode">Route Mode</string>
    <string name="routing_connection_mode">Rout Connection Mode</string>
    <string name="routing_restriction">Route Restrictions</string>
    <string name="routing_should_be_rendered">Should Be Rendered</string>
    <string name="routing_request_advices">Request Advices</string>
    <string name="routing_request_extended">Request Extended Route Points</string>
    <string name="routing_request_country">Request Country Codes</string>
    <string name="routing_advanced_settings">Advanced Settings</string>
    <string name="routing_use_slopes">Use Slopes</string>
    <string name="routing_download_corridor">Download Route Corridor</string>
    <string name="routing_download_corridor_widht">Route Corridor Width</string>
    <string name="routing_download_corridor_wait">Wait Corridor Download</string>
    <string name="routing_destination_is_point">Destination Is Point</string>
    <string name="routing_route_info">Route Information</string>
    <string name="routing_route_id">Route ID</string>
    <string name="routing_distance">Distance</string>
    <string name="routing_estimated_time">Estimated Time</string>
    <string name="routing_calculated_after_rerouting">Calculated After Rerouting</string>
    <string name="routing_toll_roades">Contains Toll Roads</string>
    <string name="routing_highways">Contains Highways</string>
    <string name="routing_ferry_lines">Contains Ferry Lines</string>
    <string name="routing_viapoints_on_route">Via Points On Route</string>
    <string name="routing_advice_list">Advice List</string>
    <string name="routing_coordinates">Coordinates</string>
    <string name="routing_country_codes">Country Codes</string>
    <string name="routing_actions">Actions</string>
    <string name="routing_calculate_route">Calculate Route</string>
    <string name="routing_top_inset">Top Inset</string>
    <string name="routing_left_inset">Left Inset</string>
    <string name="routing_bottom_inset">Bottom Inset</string>
    <string name="routing_right_inset">Right Inset</string>
    <string name="routing_zoom_to_route">Zoom To Route</string>
    <string name="routing_block_distance">Block Road Distance</string>
    <string name="routing_block_road">Block Road</string>
    <string name="routing_block_type">Block Road Type</string>
    <string name="routing_unlock_road">Unlock Road</string>
    <string name="routing_save_id">Save Road Id</string>
    <string name="routing_save_route">Save Route To Cache</string>
    <string name="routing_load_id">Load Route Id</string>
    <string name="routing_load_route">Load Route From Cache</string>
    <string name="routing_clear_routes_from_chace">Clear All Routes From Cache</string>
    <string name="routing_get_advice_list">Get Advice List</string>
    <string name="routing_get_coordinates_list">Route Coordinates From Route</string>
    <string name="routing_get_country_codes">Request Country Code</string>
    <string name="routing_clear_all">Clear Routes</string>
    <string name="routing_corridor_download">Corridor Download</string>
    <string name="routing_viapoint_longtap">Long Tap For Coordinates</string>
    <string name="routing_viapoint_add">Add Via Point</string>
    <string name="routing_viapoint_remove">Remove Via Point</string>
    <string name="routing_viapoint_settings">Via Points Settings</string>
    <string name="routing_viapoint_list">Via Point List</string>
    <string name="routing_id">ID: </string>
    <string name="routing_position">Position: </string>
    <string name="routing_country_codes_list">Country Codes List</string>
    <string name="routing_country_code">Country Codes: </string>
    <string name="routing_instruction">Instruction: </string>
    <string name="routing_coordinates_list">Coordinates List</string>
    <string name="routing_longitude">Longitude: </string>
    <string name="routing_latitude">Latitude: </string>
    <string name="block_road_toast">Please select one route for calculation!</string>
    <string name="block_road_check">Block road distance longer then route distance</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="avoid_toll_roads">Avoid Toll Roads</string>
    <string name="avoid_highways">Avoid Highways</string>
    <string name="avoid_ferries">Avoid Ferries</string>
    <string name="avoid_bicyclewalk">Avoid Bicycle Walk</string>
    <string name="avoid_bicyclecarry">Avoid Bicycle Carry</string>
    <string name="map_style_day">Day</string>
    <string name="map_style_night">Night</string>
    <string name="map_style_outdoor">Outdoor</string>
    <string name="map_style_grayscale">Grayscale</string>
    <string name="navigate">Navigate</string>
    <string name="label_parsing_xml">Parsing Maps.xml file ...</string>
    <string name="label_download">Download</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="reverse_geocode">Reverse geocode</string>
    <string name="country_code">Country code:</string>
    <string name="city">City:</string>
    <string name="street">Street:</string>
    <string name="house_number">House number:</string>
    <string name="search">Search</string>
    <string name="searching">Searching ...</string>
    <string name="search_topic">Search topic</string>
    <string name="radius">Radius (m)</string>
    <string name="calculate_route">Calculate route</string>
    <string name="stop_navigation">Stop navigation</string>
    <string name="start_navigation">Start navigation</string>
    <string name="label_draw">Draw &amp; Route</string>
    <string name="label_route">Route</string>
    <string name="label_position_me">Position me</string>
    <string name="label_heading">Heading</string>
    <string name="no_position_available">Current position is not available</string>
    <string name="route_calculation_failed">Route calculation failed</string>
    <string name="show_heat_map">SHOW HEAT MAP FOR\nTHE SELECTED CATEGORIES</string>
    <string name="gpx_license_notification_text">GPX track navigation is available for commercial use with a enterprise license. Usage without such a license will lead to your API KEY being suspended.</string>
    <string name="ok_text">OK</string>
    <string name="update_label">Update</string>
    <string name="cancel_label">Cancel</string>
    <string name="gpx_route_1">Berlin Unter den Linden - Berlin Hohenzollerndamm</string>
    <string name="gpx_route_2">Berlin Unter den Linden - Berlin Grunewaldstrasse</string>
    <string name="gpx_route_3">Munchen Oskar-von-Miller-Ring – Herterichstrasse</string>
    <string name="gpx_route_4">Berlin – Hamburg</string>
    <string name="gpx_route_5">Chicago city route</string>
    <string name="start_point_nav">Select start point</string>
    <string name="end_point_nav">Select end point</string>
    <string name="calculate_routes">Calculate route(s)</string>
    <string name="start_free_walk">Start free walk</string>
    <string name="start_free_drive">Start free drive</string>
    <string name="settings_nav_ui">Settings</string>
    <string name="on_button"> On </string>
    <string name="off_button">Off</string>
    <string name="long_tap_for_position">Long tap on the map to position point</string>
    <string name="long_tap_start_location">Long tap on the map to position start point</string>
    <string name="long_tap_destination_location">Long tap on the map to position destination point</string>
    <string name="long_tap_poi_location">Long tap on the map to position trackable POI</string>
    <string name="select_via_point">Select via point</string>
    <string name="clear_via_point">Clear via point</string>
    <string name="no_position_message">No current position</string>
    <string name="cancel_all_downloads">CANCEL ALL DOWNLOADS</string>
    <string name="text_to_speech_engine_not_initialized">Text-to-speech could not be initialized</string>
    <string name="no_offline_packages">No offline map packages are available</string>
    <string name="test">Test</string>
    <string name="testing">Testing</string>
    <string name="real_reach_choose_type">Choose the real reach profile</string>
    <string name="real_reach_profile_time">Time</string>
    <string name="real_reach_profile_energy">Energy</string>
    <string name="real_reach_profile_distance">Distance</string>
    <string name="real_reach_online">Online</string>
    <string name="real_reach_offline">Offline</string>
    <string name="real_reach_hybrid">Hybrid</string>
    <string name="round_trip">Round trip on</string>
    <string name="round_trip_off">Round trip off</string>
    <string name="general_label">General</string>
    <string name="route_type_car_fastest">Car fastest</string>
    <string name="route_type_car_shortest">Car shortest</string>
    <string name="route_type_car_efficient">Efficient route</string>
    <string name="route_type_pedestrian">Pedestrian</string>
    <string name="route_type_bicycle_fast">Bicycle fastest</string>
    <string name="route_type_bicycle_short">Bicycle shortest</string>
    <string name="route_type_bicycle_quiet">Bicycle quietest</string>
    <string name="km_m">Kilometers/Meters</string>
    <string name="mi_feet">Miles/Feet</string>
    <string name="mi_yards">Miles/Yards</string>
    <string name="one_route">1</string>
    <string name="two_routes">2</string>
    <string name="three_routes">3</string>
    <string name="real_navigation">Real</string>
    <string name="simulation_navigation">Simulation</string>
    <string name="sim_from_log_navigation">File</string>
    <string name="five">5km/h</string>
    <string name="ten">10km/h</string>
    <string name="fifteen">15km/h</string>
    <string name="twelve">20km/h</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="more"><![CDATA[>]]></string>
    <string name="five_mi_h">5mi/h</string>
    <string name="ten_mi_h">10mi/h</string>
    <string name="fifteen_mi_h">15mi/h</string>
    <string name="twelve_mi_h">20mi/h</string>
    <string name="open_drawer">OPEN</string>
    <string name="close_drawer">CLOSE</string>
</resources>